# SmartDocChat

./: .replit  app.py  basic_pdf_compressor.py  chat_service.py  comprehensive_test.py  cookies.txt  debug_upload.js  document_processor.py  final_test.py  frontend_test.html  main.py  medium_test.txt  models.py  pdf_compressor.py  pdf_processor.py  pyproject.toml  replit.md  routes.py  session_test.txt  simple_pdf_compressor.py  small_test.txt  test_cases.py  test_chunk_count.txt  test_frontend.py  test_functionality.py  test_upload.html  test_upload.py  tts_service.py  vector_store.faiss  vector_store.pkl  vector_store.pkl.faiss  vector_store.pkl.pkl  vector_store.py  web_search.py
instance/: pdf_chat.db
services/: __init__.py  base_service.py  chat_service.py  comparison_service.py  document_service.py  embeddings_service.py  session_service.py  simple_similarity.py
static/: test_chemical_format.html
static/css/: style.css  theme-overrides.css
static/js/: chat.js
templates/: index.html
uploads/: .gitkeep  1751388400_fresh_test.txt  1751390501_test_simple.txt  1751440697_test_upload.txt  1751453447_test_simple_upload.txt  ThisDirector
