[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "docx>=0.2.4",
    "email-validator>=2.2.0",
    "faiss-cpu>=1.11.0",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "livekit>=1.0.11",
    "livekit-agents>=1.1.4",
    "livekit-plugins-deepgram>=1.1.4",
    "livekit-plugins-openai>=1.1.4",
    "numpy>=2.3.1",
    "openai>=1.93.0",
    "pdfplumber>=0.11.7",
    "psycopg2-binary>=2.9.10",
    "pymupdf>=1.26.1",
    "python-docx>=1.2.0",
    "requests>=2.32.4",
    "sqlalchemy>=2.0.41",
    "werkzeug>=3.1.3",
]
